--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jsonfile": "^6.1.4",
+    "@types/morgan": "^1.9.9",
     "morgan": "1.10.0",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
